--- a/mysite/web.config
+++ b/mysite/web.config
@@ -4,7 +4,7 @@
     <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
     <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\home\site\wwwroot\env\Scripts\activate_this.py" />
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_virtualenv_handler()" />
-    <add key="PYTHONPATH" value="D:\home\site\wwwroot" />
+    <add key="PYTHONPATH" value="D:\home\site\wwwroot\mysite" />
     <add key="DJANGO_SETTINGS_MODULE" value="mysite.settings" />
     <add key="WSGI_LOG" value="D:\home\LogFiles\wfastcgit.log"/>
   </appSettings>
